letter-spacing first block fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -883,7 +883,6 @@ body {
         display: inline-block;
         padding: 0 15px;
         margin-right: -41px;
-        letter-spacing: -2px;
         .subTitle {
           display: inline-block;
           font-family: 'gothampro-black', sans-serif;
@@ -935,7 +934,6 @@ body {
         font-size: 30px;
         font-weight: 900;
         color: #232222;
-        letter-spacing: -1.2px;
         margin: 19px -117px 0 0;
         @media screen and (max-width: 1600px) {
           font-size: 25px;
